--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<pre class="hidden" id="sample1">
+<script type="text/x-template" id="sample1">
 p('debug');
 log.debug( 'this is a debug message' );
 p('info');
@@ -92,8 +92,8 @@ p('warning');
 log.warn( 'this is a warning message' );
 p('error');
 log.error( 'this is an error message' );
-</pre>
-<pre class="hidden" id="sample2">
+</script>
+<script type="text/x-template" id="sample2">
 log.profile( 'generate test string' );
 
 var testContent = '';
@@ -102,8 +102,8 @@ for ( var i = 0; i < 3000; i++ ) {
 }
 
 log.profile( 'generate test string' );
-</pre>
-<pre class="hidden" id="sample3">
+</script>
+<script type="text/x-template" id="sample3">
 // 全体ループ
 log.profile('total');
 
@@ -118,7 +118,7 @@ for (var i = 0; i < 1000000; i++) {}
 log.profile('loop2');
 
 log.profile('total');
-</pre>
+</script>
 
 </div>
 
