--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>サンプル集</title>
+    <title>JavaScript Samples | nqou.net</title>
     <meta name="description" content="JavaScriptのサンプル集">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -23,7 +23,7 @@
 <div class="container">
 
     <header>
-        <h1 class="page-header">JavaScript Samples List</h1>
+        <h1 class="page-header">JavaScript Samples</h1>
         <ol class="breadcrumb">
           <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li class="active">Samples</li>
@@ -48,10 +48,6 @@
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
     <script>
