ファイルの整理(master)

--- a/app/blackbird.html
+++ b/app/blackbird.html
@@ -164,6 +164,7 @@ log.profile('total');
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
