--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
