jGrowlサンプルを追加(master)
Grapnelを使ってみたが、hashchangeを見ているようなので、ボタンの連続押しのためにはリセットが必要だ

--- a/app/blackbird.html
+++ b/app/blackbird.html
@@ -165,6 +165,7 @@ log.profile('total');
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
+    <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
