--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,13 @@
         </a>
     </div>
 
+    <div class="list-group">
+        <a href="jgrowl.html" class="list-group-item">
+            <h3 class="list-group-item-heading">jGrowl.js</h3>
+            <p class="list-group-item-text">jGrowl is an unobtrusive notification system for web applications.</p>
+        </a>
+    </div>
+
     <footer>
         <h4>&copy; @nqounet <small class="version">{{pkg.version}}</small></h4>
     </footer>
@@ -48,6 +55,7 @@
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
+    <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
