nanobar を追加(master)
jgrowlで空文字列を送れないように修正

--- a/app/blackbird.html
+++ b/app/blackbird.html
@@ -163,12 +163,16 @@ log.profile('total');
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/nanobar/nanobar.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!-- build:js scripts/nanobar.js -->
+    <script src="scripts/nanobar.js"></script>
+    <!-- endbuild -->
     <!-- build:js blackbirdjs/blackbird.js -->
     <script src="blackbirdjs/blackbird.js"></script>
     <script src="scripts/blackbird.js"></script>
