--- a/app/jgrowl.html
+++ b/app/jgrowl.html
@@ -105,12 +105,16 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../bower_components/nanobar/nanobar.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
+    <!-- build:js scripts/nanobar.js -->
+    <script src="scripts/nanobar.js"></script>
+    <!-- endbuild -->
     <!-- build:js scripts/jgrowl.js -->
     <script src="scripts/jgrowl.js"></script>
     <!-- endbuild -->
