--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,16 @@
     </header>
 
     <div class="list-group">
-        <a href="blackbird.html" class="list-group-item">
-            <h3 class="list-group-item-heading">Blackbird.js</h3>
-            <p class="list-group-item-text">Blackbird logging utility</p>
+        <a href="oboe.html" class="list-group-item">
+            <h3 class="list-group-item-heading">Oboe.js</h3>
+            <p class="list-group-item-text">Oboe.js is an open source Javascript library for loading JSON using streaming, combining the convenience of DOM with the speed and fluidity of SAX.</p>
+        </a>
+    </div>
+
+    <div class="list-group">
+        <a href="nanobar.html" class="list-group-item">
+            <h3 class="list-group-item-heading">nanobar.js</h3>
+            <p class="list-group-item-text">Very very lighweight progress bars. No jQuery required.</p>
         </a>
     </div>
 
@@ -45,9 +52,9 @@
     </div>
 
     <div class="list-group">
-        <a href="nanobar.html" class="list-group-item">
-            <h3 class="list-group-item-heading">nanobar.js</h3>
-            <p class="list-group-item-text">Very very lighweight progress bars. No jQuery required.</p>
+        <a href="blackbird.html" class="list-group-item">
+            <h3 class="list-group-item-heading">Blackbird.js</h3>
+            <p class="list-group-item-text">Blackbird logging utility</p>
         </a>
     </div>
 
@@ -64,6 +71,7 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
+    <script src="../bower_components/oboe/dist/oboe-browser.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
