--- a/app/nanobar.html
+++ b/app/nanobar.html
@@ -91,6 +91,7 @@
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
+    <script src="../bower_components/oboe/dist/oboe-browser.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
