grapnelはsrc/grapnel.jsに変更だ(master)

--- a/app/blackbird.html
+++ b/app/blackbird.html
@@ -166,7 +166,7 @@ log.profile('total');
     <script src="../bower_components/nanobar/nanobar.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
-    <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
+    <script src="../bower_components/grapnel/src/grapnel.js"></script>
     <script src="../bower_components/oboe/dist/oboe-browser.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
