--- a/app/oboe.html
+++ b/app/oboe.html
@@ -98,7 +98,7 @@
     <script src="../bower_components/nanobar/nanobar.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
-    <script src="../bower_components/grapnel/dist/grapnel.min.js"></script>
+    <script src="../bower_components/grapnel/src/grapnel.js"></script>
     <script src="../bower_components/oboe/dist/oboe-browser.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
