--- a/app/blackbird.html
+++ b/app/blackbird.html
@@ -168,6 +168,8 @@ log.profile('total');
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <script src="../bower_components/grapnel/src/grapnel.js"></script>
     <script src="../bower_components/oboe/dist/oboe-browser.js"></script>
+    <script src="../bower_components/mustache/mustache.js"></script>
+    <script src="../bower_components/lscache/lscache.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
