--- a/app/nanobar.html
+++ b/app/nanobar.html
@@ -92,6 +92,8 @@
     <script src="../bower_components/jgrowl/jquery.jgrowl.js"></script>
     <script src="../bower_components/grapnel/src/grapnel.js"></script>
     <script src="../bower_components/oboe/dist/oboe-browser.js"></script>
+    <script src="../bower_components/mustache/mustache.js"></script>
+    <script src="../bower_components/lscache/lscache.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
