bower install owlcarousel(master)

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,13 @@
     </header>
 
     <div class="list-group">
+        <a href="owlcarousel.html" class="list-group-item">
+            <h3 class="list-group-item-heading">OwlCarousel</h3>
+            <p class="list-group-item-text">Owl Carousel. Touch enabled jQuery plugin that lets you create beautiful responsive carousel slider.</p>
+        </a>
+    </div>
+
+    <div class="list-group">
         <a href="oboe.html" class="list-group-item">
             <h3 class="list-group-item-heading">Oboe.js</h3>
             <p class="list-group-item-text">Oboe.js is an open source Javascript library for loading JSON using streaming, combining the convenience of DOM with the speed and fluidity of SAX.</p>
