--- a/app/blackbird.html
+++ b/app/blackbird.html
@@ -28,7 +28,7 @@
     <header>
         <h1 class="page-header">Blackbird.js</h1>
         <ol class="breadcrumb">
-          <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+          <li><a href="//www.nqou.net"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a href="./">Samples</a></li>
           <li class="active">Blackbird.js</li>
         </ol>
