--- a/app/owlcarousel.html
+++ b/app/owlcarousel.html
@@ -29,7 +29,7 @@
     <header>
         <h1 class="page-header">OwlCarousel</h1>
         <ol class="breadcrumb">
-          <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+          <li><a href="//www.nqou.net"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a href="./">Samples</a></li>
           <li class="active">OwlCarousel</li>
         </ol>
