--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <header>
         <h1 class="page-header">JavaScript Samples</h1>
         <ol class="breadcrumb">
-          <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+          <li><a href="//www.nqou.net"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li class="active">Samples</li>
         </ol>
     </header>
