--- a/app/jgrowl.html
+++ b/app/jgrowl.html
@@ -28,7 +28,7 @@
     <header>
         <h1 class="page-header">jGrowl</h1>
         <ol class="breadcrumb">
-          <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+          <li><a href="//www.nqou.net"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a href="./">Samples</a></li>
           <li class="active">jGrowl</li>
         </ol>
