--- a/app/oboe.html
+++ b/app/oboe.html
@@ -25,7 +25,7 @@
     <header>
         <h1 class="page-header">Oboe.js</h1>
         <ol class="breadcrumb">
-          <li><a href="/"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+          <li><a href="//www.nqou.net"><span class="glyphicon glyphicon-home"></span> Home</a></li>
           <li><a href="./">Samples</a></li>
           <li class="active">Oboe.js</li>
         </ol>
